--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1>Hello World</h1>
+    <p>
+        <ul>
+            <li><a href="./map.html">MAP API</a></li>
+            <li><a href="./instagram.html">Instagram API</a></li>
+        </ul>
+    </p>
 </body>
+
 </html>
